--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <title>React App</title>
+    <title>FDA</title>
   </head>
   <body class="hide-scrollbar">
     <noscript>You need to enable JavaScript to run this app.</noscript>
